# OpenColorIO

./: .appveyor.yml  .travis.yml  CMakeLists.txt
.github/workflows/: ci_workflow.yml
doc/: CMakeLists.txt  conf.py.in
docs/: CMakeLists.txt  CompatibleSoftware.rst  index.rst  installation.rst  introduction.rst
docs/configurations/: aces_1.0.3.rst  index.rst
docs/ociotheme/: page.html
docs/userguide/: config_syntax.rst  index.rst  looks.rst
export/OpenColorIO/: OpenColorABI.h.in  OpenColorIO.h
ext/: CMakeLists.txt
ext/oiio/src/include/: unittest.h
share/cmake/macros/: FindPythonPackage.cmake
share/cmake/modules/: FindSphinx.cmake
src/: CMakeLists.txt
src/OpenColorIO/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/ociocheck/: CMakeLists.txt
src/apps/ocioconvert/: CMakeLists.txt
src/apps/ociodisplay/: CMakeLists.txt
src/apps/share/: argparse.h
src/bindings/: CMakeLists.txt
src/bindings/java/: CMakeLists.txt
src/bindings/python/: CMakeLists.txt
src/core/: CMakeLists.txt  FileFormatCSP.cpp  Lut3DOp.cpp  PathUtils.cpp  UnitTest.cpp
src/util/: CMakeLists.txt
src/utils/: CMakeLists.txt
test/: CMakeLists.txt
test/data/: CMakeLists.txt
tests/cpu/: CMakeLists.txt
tests/gpu/: CMakeLists.txt
tests/python/: CMakeLists.txt  OpenColorIOTestSuite.py
