add_subdirectory(util)
add_subdirectory(ociobakelut)
add_subdirectory(ociocheck)

find_package(OpenImageIO QUIET)
if(OIIO_FOUND)
  if(NOT TARGET openglbuilder)
    add_subdirectory(openglbuilder)
  endif()
  add_subdirectory(ociolutimage)
  add_subdirectory(ocioconvert)
  add_subdirectory(ociodisplay)
else()
  message(WARNING "OIIO Not found. Skipping build for ociolutimage, ocioconvert and ociodisplay")
endif()
